--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(particle_research)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(particle_research main.cpp)
+add_executable(particle_research main.cpp Particle.cpp Particle.h)
